--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eth-contract-class",
-  "version": "0.0.13-beta.2",
+  "name": "@acdi/eth-contract-class",
+  "version": "1.0.0-alfa.1",
   "description": "generate js wrapper class around an ethereum contract",
   "main": "lib/generateClass.js",
   "directories": {
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/Giveth/eth-contract-class#readme",
   "dependencies": {
-    "web3-core-promievent": "^1.0.0-beta.21"
+    "web3-core-promievent": "^1.2.11"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
